# flipflop-2026

./: .gitattributes  Cargo.toml  README.md  lefthook.yml  tasks.py
benchmark/: Cargo.toml
benchmark/benches/: criterion.rs
puzzle01/: Cargo.toml
puzzle01/src/: input.txt  lib.rs  main.rs
puzzle02/src/: input.txt  lib.rs  main.rs
puzzle03/: Cargo.toml
puzzle03/src/: input.txt  lib.rs  main.rs
puzzle04/src/: input.txt  lib.rs  main.rs
puzzle05/src/: input.txt  lib.rs  main.rs
puzzle06/: Cargo.toml
puzzle06/src/: input.txt  lib.rs  main.rs
puzzle07/: Cargo.toml
puzzle07/src/: input.txt  lib.rs  main.rs
puzzle08/src/: input.txt  lib.rs  main.rs
puzzle09/: Cargo.toml
puzzle09/src/: input.txt  lib.rs  main.rs
puzzle10/: program.txt
puzzle10/src/: input.txt  lib.rs  main.rs
puzzle11/: Cargo.toml  output.txt
puzzle11/src/: input.txt  lib.rs  main.rs
puzzle12/: masks_3d.py  masks_4d.py
puzzle12/src/: input.txt  lib.rs  main.rs
