[workspace]
resolver = "3"
members = [
    "benchmark",
    "puzzle01",
    "puzzle02",
]

[workspace.metadata.tasks]
problem_name = "puzzle"
problem_digits = 2
year = 2026

[workspace.metadata.puzzle01]
start_time = 2026-07-06T15:37:08.233412
completion_time = 2026-07-06T15:43:03.078100

[workspace.metadata.puzzle02]
start_time = 2026-07-07T15:49:40.123509
completion_time = 2026-07-07T16:01:06.296176
[profile.release]
debug = true
