[workspace]
resolver = "3"
members = [
    "benchmark",
    "puzzle01",
    "puzzle02",
    "puzzle03",
    "puzzle04",
    "puzzle05",
]

[workspace.metadata.tasks]
problem_name = "puzzle"
problem_digits = 2
year = 2026

[workspace.metadata.puzzle01]
start_time = 2026-07-06T15:37:08.233412
completion_time = 2026-07-06T15:43:03.078100

[workspace.metadata.puzzle02]
start_time = 2026-07-07T15:49:40.123509
completion_time = 2026-07-07T16:01:06.296176

[workspace.metadata.puzzle03]
start_time = 2026-07-08T19:46:54.009930
completion_time = 2026-07-08T20:03:04.366496

[workspace.metadata.puzzle04]
start_time = 2026-07-09T10:03:34.751241
completion_time = 2026-07-09T10:26:40.849282

[workspace.metadata.puzzle05]
start_time = 2026-07-10T11:20:42.792682
completion_time = 2026-07-10T11:59:41.905705
[profile.release]
debug = true
