[package]
name = "benchmark"
version = "1.0.0"
edition = "2024"

[dependencies]
puzzle01 = { version = "0.1.0", path = "../puzzle01" }
puzzle02 = { version = "0.1.0", path = "../puzzle02" }
puzzle03 = { version = "0.1.0", path = "../puzzle03" }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "criterion"
harness = false

[lib]
bench = false
