[package]
name = "benchmark"
version = "1.0.0"
edition = "2024"

[dependencies]
puzzle01 = { version = "0.1.0", path = "../puzzle01" }
puzzle02 = { version = "0.1.0", path = "../puzzle02" }
puzzle03 = { version = "0.1.0", path = "../puzzle03" }
puzzle04 = { version = "0.1.0", path = "../puzzle04" }
puzzle05 = { version = "0.1.0", path = "../puzzle05" }
puzzle06 = { version = "0.1.0", path = "../puzzle06" }
puzzle07 = { version = "0.1.0", path = "../puzzle07" }
puzzle08 = { version = "0.1.0", path = "../puzzle08" }
puzzle09 = { version = "0.1.0", path = "../puzzle09" }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "criterion"
harness = false

[lib]
bench = false
